--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Portfolio</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: #4f46e5;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    nav a {
+      margin: 0 1rem;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    h2 {
+      color: #4f46e5;
+    }
+    .projects a {
+      display: block;
+      margin: 0.5rem 0;
+      text-decoration: none;
+      color: #1e3a8a;
+    }
+    footer {
+      background: #4f46e5;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
+    @media (max-width: 600px) {
+      nav a {
+        display: block;
+        margin: 0.5rem 0;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Hello, I'm [Your Name]</h1>
+    <p>Aspiring [Your Title - e.g., DevOps Engineer | Network Specialist]</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am passionate about IT, currently focused on [e.g., Windows Server, Cybersecurity, DevOps]. I'm dedicated to continuous learning and building real-world solutions.</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>Windows Server Administration</li>
+      <li>Linux (Red Hat, Ubuntu)</li>
+      <li>Cybersecurity & Ethical Hacking</li>
+      <li>Docker & DevOps Basics</li>
+      <li>Python Programming</li>
+    </ul>
+  </section>
+
+  <section id="projects" class="projects">
+    <h2>Projects</h2>
+    <a href="https://github.com/yourusername/project1" target="_blank">🔗 Project 1 - Windows Server Lab Setup</a>
+    <a href="https://github.com/yourusername/project2" target="_blank">🔗 Project 2 - Docker Container Lab</a>
+    <a href="https://github.com/yourusername/project3" target="_blank">🔗 Project 3 - Python Automation Scripts</a>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: your.email@example.com</p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
+  </section>
+
+  <footer>
+    <p>© 2025 Your Name. Built with 💻 and ☕</p>
+  </footer>
+
+</body>
+</html>
