--- a/index.html
+++ b/index.html
@@ -1,101 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Portfolio</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background: #4f46e5;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-    nav a {
-      margin: 0 1rem;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    section {
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-    h2 {
-      color: #4f46e5;
-    }
-    .projects a {
-      display: block;
-      margin: 0.5rem 0;
-      text-decoration: none;
-      color: #1e3a8a;
-    }
-    footer {
-      background: #4f46e5;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-    }
-    @media (max-width: 600px) {
-      nav a {
-        display: block;
-        margin: 0.5rem 0;
-      }
-    }
-  </style>
+  <meta name="viewport" , content="width=device-width, initial-scale=1.0" />
+  <title>MLakmal</title>
+
+  <!--Bootstrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <style></style>
+
+  <link rel="stylesheet" href="CSS.css">
 </head>
+
 <body>
-
-  <header>
-    <h1>Hello, I'm [Your Name]</h1>
-    <p>Aspiring [Your Title - e.g., DevOps Engineer | Network Specialist]</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am passionate about IT, currently focused on [e.g., Windows Server, Cybersecurity, DevOps]. I'm dedicated to continuous learning and building real-world solutions.</p>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>Windows Server Administration</li>
-      <li>Linux (Red Hat, Ubuntu)</li>
-      <li>Cybersecurity & Ethical Hacking</li>
-      <li>Docker & DevOps Basics</li>
-      <li>Python Programming</li>
-    </ul>
-  </section>
-
-  <section id="projects" class="projects">
-    <h2>Projects</h2>
-    <a href="https://github.com/yourusername/project1" target="_blank">🔗 Project 1 - Windows Server Lab Setup</a>
-    <a href="https://github.com/yourusername/project2" target="_blank">🔗 Project 2 - Docker Container Lab</a>
-    <a href="https://github.com/yourusername/project3" target="_blank">🔗 Project 3 - Python Automation Scripts</a>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: your.email@example.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
-  </section>
-
-  <footer>
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+      <a class="navbar-brand d-flex align-items-center me-auto" href="#">
+        MLakmal
+        <!--<img class="header-logo" src="Logo.png" alt="MLakmal">-->
+        <!--<span class="ms-2 text-white fw-bold">MLakmal</span> -->
+      </a>
+      <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="drawer">
+        <div class="offcanvas offcanvas-end drawer" tabindex="-1" id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">MLakmal</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-lg-2" href="#">About</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link mx-lg-2 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Blogs
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-lg-2" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <!--Bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
+  
+  <!--<footer>
     <p>© 2025 Your Name. Built with 💻 and ☕</p>
-  </footer>
-
+  </footer> -->
 </body>
+
 </html>
