--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
     crossorigin="anonymous"></script>
   
-  <!--<footer>
-    <p>© 2025 Your Name. Built with 💻 and ☕</p>
-  </footer> -->
+  <footer>
+    <p>© 2025 Madhushanka Lakmal. Built with 💻 and ☕</p>
+  </footer>
 </body>
 
 </html>
