--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" , content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" , content="width=device-width, initial-scale=1.0">
   <title>MLakmal</title>
 
   <!--Bootstrap CSS-->
@@ -11,64 +11,48 @@
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <style></style>
 
+  <!--Heading google font-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Audiowide&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="CSS.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
-      <a class="navbar-brand d-flex align-items-center me-auto" href="#">
-        MLakmal
-        <!--<img class="header-logo" src="Logo.png" alt="MLakmal">-->
-        <!--<span class="ms-2 text-white fw-bold">MLakmal</span> -->
-      </a>
-      <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-        aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="drawer">
-        <div class="offcanvas offcanvas-end drawer" tabindex="-1" id="offcanvasNavbar"
-          aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">MLakmal</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="#">About</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link mx-lg-2 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Blogs
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+  <header>
+    <div class="holographic-container">
+      <div class="holographic-card">
+        <h1 style="font-family: Audiowide, sans-serif;">
+          <img class="image" src="h-logo.png" alt="">&nbsp;MLAKMAL
+        </h1>
       </div>
     </div>
-  </nav>
-  <!--Bootstrap JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"></script>
-  
+    <!--<h1 style="font-family: Audiowide, sans-serif;">
+      <img class="image" src="h-logo.png" alt="">&nbsp;MLAKMAL
+    </h1>-->
+    <p style="font-family: Lunasima, sans-serif;">Aspiring Cybersecurity Analys | Linux Enthusiast | System Administrator | DevOps Learner</p>
+  </header>
+
+  <div class="topnav">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Blogs</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul> 
+  </div>
+
+  <div>
+    <h1>Hello World</h1>
+    <h1>Hello World</h1>
+    <h1>Hello World</h1>
+    <h1>Hello World</h1>
+    <h1>Hello World</h1>
+    <h1>Hello World</h1>
+    <h1>Hello World</h1>
+  </div>
+
   <footer>
     <p>© 2025 Madhushanka Lakmal. Built with 💻 and ☕</p>
   </footer>
